objects/DP_Picklist_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>Controlling_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlling Entry</label>
        <referenceTo>DP_Picklist_Entry__c</referenceTo>
        <relationshipLabel>Picklist Dependencies (Controlling Values)</relationshipLabel>
        <relationshipName>Picklist_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlling_Value_Source__c</fullName>
        <formula>Controlling_Entry__r.RecordType.Name</formula>
        <label>Controlling Value Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Value__c</fullName>
        <formula>Controlling_Entry__r.Display_Name__c</formula>
        <label>Controlling Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Entry</label>
        <referenceTo>DP_Picklist_Entry__c</referenceTo>
        <relationshipLabel>Picklist Dependencies (Dependent Values)</relationshipLabel>
        <relationshipName>Picklist_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent_Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which picklist contains the values being limited?</inlineHelpText>
        <label>Dependent Picklist</label>
        <referenceTo>DP_Picklist__c</referenceTo>
        <relationshipLabel>Picklist Dependencies</relationshipLabel>
        <relationshipName>Picklist_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent_Value__c</fullName>
        <formula>Dependent_Entry__r.Display_Name__c</formula>
        <label>Dependent Value</label>
        <type>Text</type>
    </fields>
    <label>Picklist Dependency</label>
    <nameField>
        <displayFormat>PLD-{00000000}</displayFormat>
        <label>Picklist Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Dependencies</pluralLabel>
    <recordTypes>
        <fullName>Dependent_Value</fullName>
        <active>true</active>
        <label>Dependent Value</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>